--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,6 +26,7 @@ jobs:
     - name: pwd
       run: |
         pwd
+        ls -alh
 
     - name: Build, tag, and push image to Amazon ECR
       env:
