--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,17 +22,12 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-
-    - name: pwd
-      run: |
-        pwd
-        ls -alh
-
+      
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: marko-test
         IMAGE_TAG: nodejs_demo_image
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./source-code/
+        docker build . -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./source-code/Dockefile
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
