--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,5 +29,5 @@ jobs:
         ECR_REPOSITORY: marko-test
         IMAGE_TAG: nodejs_demo_image
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./source-code/
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG source-code/
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
