--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,10 +24,12 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build, tag, and push image to Amazon ECR
+      uses: docker/build-push-action@v4
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: marko-test
         IMAGE_TAG: nodejs_demo_image
-      run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG source-code/
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      with:
+        context: source-code
+        push: true
+        tags: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
