--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,11 +25,7 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       uses: docker/build-push-action@v4
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: marko-test
-        IMAGE_TAG: nodejs_demo_image
       with:
         context: source-code
         push: true
-        tags: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        tags: ${{ steps.login-ecr.outputs.registry }}/marko-test:nodejs_demo_image
