--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,8 +24,11 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build, tag, and push image to Amazon ECR
-      uses: docker/build-push-action@v4
-      with:
-        context: source-code
-        push: true
-        tags: ${{ steps.login-ecr.outputs.registry }}/marko-test:nodejs_demo_image
+      working-directory: source-code
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: marko-test
+        IMAGE_TAG: nodejs_demo_image
+      run: |
+        docker build . --file Dockerfile --tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
