--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,10 +21,11 @@ jobs:
         shell: bash
         working-directory: ./custom-modules/accounts/staging/ecs
     steps:
-    - uses: actions/checkout@v2
-    - uses: hashicorp/setup-terraform@v2
-
+    - name: Checkout the repository to the runner
+      uses: actions/checkout@v2
+ 
     - name: Setup Terraform with specified version on the runner
+      uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.3.0
 
