adding on:push and removing envs from build job

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,9 +1,6 @@
 name: marko-test
 
 on:
- push:
-   branches:
-   - main
 
 env:
  TF_LOG: INFO
@@ -12,6 +9,8 @@ env:
  AWS_REGION: ${{ secrets.AWS_REGION }}
  BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
  RELEASE_VERSION: nodejs_demo_image
+ ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+ ECR_REPOSITORY: marko-test
 
 jobs:
   terraform:
@@ -60,10 +59,9 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       working-directory: source-code
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: marko-test
-        IMAGE_TAG: nodejs_demo_image
+     # env:
+      #  ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+       # ECR_REPOSITORY: marko-test
       run: |
-        docker build . --file Dockerfile --tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG 
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker build . --file Dockerfile --tag $ECR_REGISTRY/$ECR_REPOSITORY:$RELEASE_VERSION 
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$RELEASE_VERSION
